--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,31 @@
+button {
+    margin-bottom: 20px;
+}
+
 .app {
     margin: 20px 150px;
+}
+
+.book {
+    list-style: none;
+}
+
+.book-form-wrapper {
+    display: none;
+    position: absolute;
+    background-color: rgba(1, 1, 1, 0.1);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.book-form {
+    padding: 20px;
+    position: absolute;
+    background-color: #fff;
+    top: 20%;
+    left: 40%;
 }
